# helgoboss-midi

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: bit_util.rs  channel.rs  channel_mod.rs  control_change_14_bit_message.rs  control_change_14_bit_message_scanner.rs  controller_number.rs  controller_number_mod.rs  key_number.rs  key_number_mod.rs  lib.rs  midi_14_bit_cc_message.rs  midi_14_bit_cc_message_parser.rs  midi_14_bit_control_change_message.rs  midi_14_bit_control_change_message_parser.rs  midi_control_change_14_bit_message.rs  midi_control_change_14_bit_message_parser.rs  midi_control_change_14_bit_message_scanner.rs  midi_message.rs  midi_message_factory.rs  midi_parameter_number_message.rs  midi_parameter_number_message_parser.rs  midi_parameter_number_message_scanner.rs  newtype_macros.rs  parameter_number_message.rs  parameter_number_message_scanner.rs  polling_parameter_number_message_scanner.rs  program_number.rs  program_number_mod.rs  raw_midi_message.rs  raw_short_message.rs  short_message.rs  short_message_factory.rs  structured_midi_message.rs  structured_short_message.rs  test_util.rs  types.rs  u14.rs  u14_mod.rs  u4_mod.rs  u7.rs  (+2 more)
