[package]
name = "helgoboss-midi"
version = "0.3.2"
authors = ["Benjamin Klum <benjamin.klum@helgoboss.org>"]
license = "MIT"
description = "Interfaces, data structures and utilities for dealing with MIDI messages according to the MIDI 1.0 specification"
repository = "https://github.com/helgoboss/helgoboss-midi"
readme = "README.md"
keywords = ["midi"]
edition = "2018"
categories = ["data-structures", "multimedia", "embedded", "no-std"]

[dependencies]
num_enum = { version = "0.5.1", default-features = false }
derive_more = "0.99.11"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_repr = { version = "0.1.6", optional = true }
doc-comment = "0.3.3"
core-error = { version = "0.0.0", default-features = false }

[dev-dependencies]
version-sync = "0.9.2"

[features]
default = ["std"]
std = []
